# Multi-agent-NER

./: .env.example  .gitignore  README.md  pyproject.toml  schema_example.json
configs/: deepseek.yaml  default.yaml  expert_prompt_generator.yaml  prompts_cot.yaml  runtime.deepseek.all_agents.yaml
datasets/: README.md
datasets/bc2gm/: bc2gm_test.200.jsonl  bc2gm_test.jsonl  schema.bc2gm.200.json  schema.bc2gm.json
datasets/conll2003/: conll2003_test.0_3452.jsonl  conll2003_test.100.jsonl  conll2003_test.360_379.jsonl  schema.conll2003.json
experiments/: dataset_runtime.py  eval_runner_common.py  generalization_refactor_plan.md  generate_dataset_expert_prompt.py  run_dataset_100_chunked.py  run_dataset_eval.py  run_dataset_full_checkpoints.py
experiments/bc2gm/: OPT_PLAN_20_59_generic.md  OPT_PLAN_chunk02_03.md  README.md  active_tuning_plan.md  chunk45_tuning_plan.md  generalization_tuning_log.md  optimization_60_99_plan.md  prepare_bc2gm_data.py  requirements.txt  run_bc2gm_experiment.py
experiments/conll2003/: EXECUTION_PROTOCOL_AND_LOG.md  README.md  analyze_eval_errors.py  analyze_traces.py  eval_existing_full_chunks.py  prepare_conll2003_data.py  (+3 more)
tests/: test_candidate_agent.py  test_conflict_cluster.py  test_dataset_schema.py  test_debate_and_adjudicator.py  test_expert_agent.py  test_json_parsing.py  test_memory_store.py  test_metrics.py  test_ner_agent.py  test_pipeline_optimizations.py  test_pipeline_smoke.py  test_rag_agent.py  test_re_agent.py  test_run_pipeline_overrides.py  test_span_augmentation.py  test_span_utils.py  test_verifier.py
(+199 files in other folders)
